--- a/addons/account/test/account_fiscalyear_close.yml
+++ b/addons/account/test/account_fiscalyear_close.yml
@@ -40,6 +40,60 @@
     company_id: base.main_company
     centralisation: 1
 -
+  In order to test the 'Multicurrency' I created an account move for previous Fiscalyear
+-
+  !python {model: account.move}: |
+    from datetime import datetime
+    date = '%s-06-14' %(datetime.now().year-1)
+    period_obj = self.pool.get('account.period')
+    period_id = period_obj.find(cr, uid, dt=date)[0]
+    from datetime import datetime
+    vals = {
+        'journal_id': ref('account.bank_journal_usd'),
+        'period_id': period_id,
+        'date': date,
+    }
+    move_id = self.create(cr, uid, vals)
+    assert move_id, "Journal Entry has not been created"
+    aml_obj = self.pool.get('account.move.line')
+    vals = {
+        'journal_id': ref('account.bank_journal_usd'),
+        'period_id': period_id,
+        'date': date,
+        'ref': 'Loaning from Vauxoo',
+        'tax_amount': 0.0,
+        'account_id': ref('account.a_pay'),
+        'currency_id': ref('base.USD'),
+        'amount_currency': -3000.0,
+        'debit': 0.0,
+        'credit': 2000.0,
+        'name': 'Loaning',
+        'partner_id': ref('base.res_partner_23'),
+        'move_id': move_id,
+        'date_maturity': '%s-06-14' %(datetime.now().year),
+    }
+    line_id = aml_obj.create(cr, uid, vals)
+    assert line_id, "Account move line has not been created"
+    vals = {
+        'journal_id': ref('account.bank_journal_usd'),
+        'period_id': period_id,
+        'date': date,
+        'ref': 'Loaning from Vauxoo',
+        'tax_amount': 0.0,
+        'account_id': ref('account.usd_bnk'),
+        'currency_id': ref('base.USD'),
+        'amount_currency': 3000.0,
+        'debit': 2000.0,
+        'credit': 0.0,
+        'name': 'Loaning',
+        'partner_id': ref('base.res_partner_23'),
+        'move_id': move_id,
+    }
+    line_id = aml_obj.create(cr, uid, vals)
+    assert line_id, "Account move line has not been created"
+    posted = self.post(cr, uid, [move_id])
+    assert posted, "Journal Entry has not been Posted"
+-
   I call the Generate Fiscalyear Opening Entries wizard
 -
   !record {model: account.fiscalyear.close, id: account_fiscalyear_close_0}:
@@ -77,3 +131,9 @@
 -
   !assert {model: res.partner, id: base.res_partner_2, string: Total Receivable does not takes unreconciled moves of previous years}:
     - credit == 1040.0
+-
+  I check that the USD Bank Account is providing the right amount
+-
+  !assert {model: account.account, id: account.usd_bnk, string: Adjustment does not match}:
+    - debit == 2000.0
+    - balance == 2000.0
